--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -10,4 +10,4 @@
     name:          '{{ opendkim_systemd_unit_name }}'
     state:         restarted
     daemon_reload: yes   
-  
+  when: not opendkim_travis_ci_mode
