--- a/tests/travis-playbook.yml
+++ b/tests/travis-playbook.yml
@@ -5,6 +5,8 @@
   roles:
   - role: ansible-opendkim
     server_name: 'localhost'
+    postfix_mail_domain: 'localhost'
+    opendkim_travis_ci_mode: True
     opendkim_domain_list:
      - match:      '*@example.org'
        domainname: 'example.org'
