--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,18 +8,18 @@ opendkim_systemd_file:       '/etc/systemd/system/{{ opendkim_systemd_unit_name 
 opendkim_mode:               's'
 opendkim_keylength:           4096
 
-opendkim_use_unix_socket:     True
-opendkim_unix_socket_path:   '/var/run/opendkim/opendkim.sock'
-opendkim_port:               '8891'
-opendkim_bind_ip:            'localhost'
-
 opendkim_user:               'opendkim'
 opendkim_group:              'opendkim'
 opendkim_user_home:          '/var/run/opendkim'
 opendkim_umask:              '002'
-opendkim_pid_file:           '/var/run/opendkim/opendkim.pid'
+opendkim_pid_file:           '{{ opendkim_user_home }}/opendkim.pid'
 opendkim_base_directory:     '{{ opendkim_user_home }}'
 opendkim_tmp_directory:      '/run/opendkim'
+
+opendkim_use_unix_socket:     True
+opendkim_unix_socket_path:   '{{ opendkim_user_home }}/opendkim.sock'
+opendkim_port:               '8891'
+opendkim_bind_ip:            'localhost'
 
 opendkim_auto_restart:        False
 opendkim_auto_restart_rate:  '10/1h'
