--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -140,12 +140,12 @@
 - name: 'Postfix config: Add OpenDKIM as smtpd_milters (add line)'
   lineinfile:
     dest:     '{{ opendkim_postfix_config }}'
-    line:     'smtpd_milters = {% if opendkim_use_unix_socket %}unix:{{ opendkim_unix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}'
+    line:     'smtpd_milters = {% if opendkim_use_unix_socket %}unix:{{ opendkim_postfix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}'
   when: opendkim_postfix_enable and not (opendkim_postfix_contains_smtpd_milters.stdout | match("smtpd_milters"))
   notify: Reload Postfix
 
 - name: 'Postfix config: Check whether smtpd_milters contains OpenDKIM'
-  shell: 'grep "^smtpd_milters" {{ opendkim_postfix_config }} | grep -w "{% if opendkim_use_unix_socket %}unix:{{ opendkim_unix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}"'
+  shell: 'grep "^smtpd_milters" {{ opendkim_postfix_config }} | grep -w "{% if opendkim_use_unix_socket %}unix:{{ opendkim_postfix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}"'
   register: opendkim_postfix_smtpd_milters_contains_opendkim
   changed_when: False
   failed_when:  False
@@ -155,7 +155,7 @@
   lineinfile:
     dest:     '{{ opendkim_postfix_config }}'
     regexp:   '^(smtpd_milters.*)'
-    line:     '\1, {% if opendkim_use_unix_socket %}unix:{{ opendkim_unix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}'
+    line:     '\1, {% if opendkim_use_unix_socket %}unix:{{ opendkim_postfix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}'
     backrefs: yes
   when: opendkim_postfix_enable and not (opendkim_postfix_smtpd_milters_contains_opendkim.stdout | match("smtpd_milters"))
   notify: Reload Postfix
@@ -169,12 +169,12 @@
 - name: 'Postfix config: Add OpenDKIM as non_smtpd_milters (add line)'
   lineinfile:
     dest:     '{{ opendkim_postfix_config }}'
-    line:     'non_smtpd_milters = {% if opendkim_use_unix_socket %}unix:{{ opendkim_unix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}'
+    line:     'non_smtpd_milters = {% if opendkim_use_unix_socket %}unix:{{ opendkim_postfix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}'
   when: opendkim_postfix_enable and not (opendkim_postfix_contains_non_smtpd_milters.stdout | match("non_smtpd_milters"))
   notify: Reload Postfix
 
 - name: 'Postfix config: Check whether non_smtpd_milters contains OpenDKIM'
-  shell: 'grep "^non_smtpd_milters" {{ opendkim_postfix_config }} | grep -w "{% if opendkim_use_unix_socket %}unix:{{ opendkim_unix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}"'
+  shell: 'grep "^non_smtpd_milters" {{ opendkim_postfix_config }} | grep -w "{% if opendkim_use_unix_socket %}unix:{{ opendkim_postfix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}"'
   register: opendkim_postfix_non_smtpd_milters_contains_opendkim
   changed_when: False
   failed_when:  False
@@ -184,14 +184,29 @@
   lineinfile:
     dest:     '{{ opendkim_postfix_config }}'
     regexp:   '^(non_smtpd_milters.*)'
-    line:     '\1, {% if opendkim_use_unix_socket %}unix:{{ opendkim_unix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}'
+    line:     '\1, {% if opendkim_use_unix_socket %}unix:{{ opendkim_postfix_socket_path }}{% else %}inet:{{ opendkim_bind_ip }}:{{ opendkim_port }}{% endif %}'
     backrefs: yes
   when: opendkim_postfix_enable and not (opendkim_postfix_non_smtpd_milters_contains_opendkim.stdout | match("non_smtpd_milters"))
   notify: Reload Postfix
 
+- name: 'Postfix config: Create path in postfix chroot'
+  file:
+    path:  '{{ opendkim_postfix_chroot_path }}'
+    owner: '{{ opendkim_user }}'
+    group: '{{ opendkim_group }}'
+    state: directory
+  when: opendkim_postfix_enable and opendkim_postfix_create_chroot_path
+  notify: Reload Postfix
+
+- name: 'Postfix config: Add postfix user to opendkim group'
+  user:
+    name: '{{ opendkim_postfix_user }}'
+    groups: '{{ opendkim_group }}'
+    append: yes
+  when: opendkim_postfix_enable
+
 - name: Check systemd enable link
-  stat:
-    path: '{{ opendkim_systemd_enable_link }}'
+  shell: '[ "$(readlink {{ opendkim_systemd_enable_link }})" = {{ opendkim_systemd_file }} ]'
   register: opendkim_systemd_enable_link_stat
   changed_when: False
 
@@ -201,7 +216,7 @@
     state:         stopped
     daemon_reload: yes
     enabled:       no
-  when: 'not opendkim_travis_ci_mode and (not opendkim_systemd_enable_link_stat.stat.islnk or (opendkim_systemd_enable_link_stat.stat.islnk and opendkim_systemd_enable_link_stat.stat.lnk_source != "{{ opendkim_systemd_file }}"))'
+  when: 'not opendkim_travis_ci_mode and opendkim_systemd_enable_link_stat.rc != 0'
 
 - name: Enable and start OpenDKIM
   systemd:
